Nav bar complete

--- a/index.html
+++ b/index.html
@@ -1,11 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    <h1>Hello</h1>
-</body>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <header class="navbar">
+      <div class="logo">
+        <a href="/index.html" class="brand">
+          <span class="brand-text">Has<span class="accent">Pay</span></span>
+        </a>
+      </div>
+      <nav class="nav_center">
+        <ul>
+          <li>
+            <a href="#RB">Recharge & Bills</a>
+            <ul>
+              <li><a href="#RB">Mobile Recharge</a></li>
+              <li><a href="#RB">Electricity bill</a></li>
+              <li><a href="#RB">DTH Recharge</a></li>
+              <li><a href="#RB">Pay Loan EMI</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#PS">Payments & services</a>
+            <ul>
+              <li><a href="#RB">Online Services</a></li>
+              <li><a href="#RB">Send Money to Anyone</a></li>
+              <li><a href="#RB">Bill Payments & Recharge</a></li>
+              <li><a href="#RB">Pay Loan EMI</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="#Comp">Company</a>
+            <ul>
+              <li><a href="#RB">About</a></li>
+              <li><a href="#RB">Contact Us </a></li>
+              <li><a href="#RB">Customer Care</a></li>
+              <li><a href="#RB">Terms & Condition</a></li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+      <div class="nav_right">
+        <div class="auth-buttons">
+          <a href="#signin" class="btn btn-signin">Sign In</a>
+          <a href="#signup" class="btn btn-signup">Sign Up</a>
+        </div>
+      </div>
+    </header>
+  </body>
 </html>
