--- a/index.html
+++ b/index.html
@@ -51,5 +51,78 @@
         </div>
       </div>
     </header>
+
+    <section id="home" class="hero">
+      <div class="hero-content">
+        <h1 style="font-family: Story Script;">Make life Easy with <br><span>HasPay</span></h1>
+        <p>
+          Seamless, secure, and instant — manage all your financial needs at one
+          place.
+        </p>
+        <a href="#s" class="cta-btn">Get Started</a>
+      </div>
+    </section>
+
+    <section id="services" class="services">
+      <h2>Our Services</h2>
+      <div class="service-container">
+        <!-- <div class="service-cards"> -->
+          <div class="service-card">
+            <a href="/mobile rch icon.png" target="_blank"
+              ><img src="/mobile rch icon.png"
+            /></a>
+            <h3>Mobile Recharge</h3>
+          </div>
+          <div class="service-card">
+            <a href="/" target="_blank"><img src="/Elec icon.avif" /></a>
+            <h3>Electricity bill</h3>
+          </div>
+          <div class="service-card">
+            <a href="/mobile rch icon.png" target="_blank"
+              ><img src="/DTH rch icon.avif"
+            /></a>
+            <h3>DTH Recharge</h3>
+          </div>
+          <div class="service-card">
+            <a href="/Loan EMI icon.avif" target="_blank"
+              ><img src="/Loan EMI icon.avif"
+            /></a>
+            <h3>Pay Loan EMI</h3>
+          </div>
+      </div>
+    </section>
+<section id="features" class="features">
+      <h2>Why Choose HasPay?</h2>
+      <div class="feature-list">
+        <div class="feature">
+          <h3>Trusted & Secure</h3>
+          <p>We use advanced encryption to keep your data protected.</p>
+        </div>
+        <div class="feature">
+          <h3>Fast Transactions</h3>
+          <p>Experience blazing-fast transfers with 99.9% uptime.</p>
+        </div>
+        <div class="feature">
+          <h3>Cashback & Rewards</h3>
+          <p>Earn points and exclusive offers on every transaction.</p>
+        </div>
+      </div>
+    </section>
+    
+
+    <section class="banner">
+        <div class="banner_cont">
+            <div class="ban_card">
+
+            </div>
+
+        </div>
+
+    </section>
+    <footer id="contact" class="footer">
+      <h2>Contact Us</h2>
+      <p>Email: support@haspay.com | Phone: +91 xxxxxxx273</p>
+      <p>© 2025 HasPay Inc. All rights reserved.</p>
+    </footer>
   </body>
 </html>
