UI fix, more pages added

--- a/index.html
+++ b/index.html
@@ -1,128 +1,145 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
     <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
+</head>
+
+<body>
     <header class="navbar">
-      <div class="logo">
-        <a href="/index.html" class="brand">
-          <span class="brand-text">Has<span class="accent">Pay</span></span>
-        </a>
-      </div>
-      <nav class="nav_center">
-        <ul>
-          <li>
-            <a href="#RB">Recharge & Bills</a>
-            <ul>
-              <li><a href="#RB">Mobile Recharge</a></li>
-              <li><a href="#RB">Electricity bill</a></li>
-              <li><a href="#RB">DTH Recharge</a></li>
-              <li><a href="#RB">Pay Loan EMI</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#PS">Payments & services</a>
-            <ul>
-              <li><a href="#RB">Online Services</a></li>
-              <li><a href="#RB">Send Money to Anyone</a></li>
-              <li><a href="#RB">Bill Payments & Recharge</a></li>
-              <li><a href="#RB">Pay Loan EMI</a></li>
-            </ul>
-          </li>
-          <li>
-            <a href="#Comp">Company</a>
-            <ul>
-              <li><a href="#RB">About</a></li>
-              <li><a href="#RB">Contact Us </a></li>
-              <li><a href="#RB">Customer Care</a></li>
-              <li><a href="#RB">Terms & Condition</a></li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
-      <div class="nav_right">
-        <div class="auth-buttons">
-          <a href="#signin" class="btn btn-signin">Sign In</a>
-          <a href="#signup" class="btn btn-signup">Sign Up</a>
+        <div class="logo">
+            <a href="/index.html" class="brand">
+                <span class="brand-text">Has<span class="accent">Pay</span></span>
+            </a>
         </div>
-      </div>
+        <nav class="nav_center">
+            <ul>
+                <li>
+                    <a href="#RB">Recharge & Bills</a>
+                    <ul>
+                        <li>
+                            <a href="/pages/bills.html" target="_blank">Mobile Recharge</a>
+                        </li>
+                        <li>
+                            <a href="/pages/electric.html" target="_blank">Electricity bill</a>
+                        </li>
+                        <li>
+                            <a href="/pages/dth.html" target="_blank">DTH Recharge</a>
+                        </li>
+                        <li>
+                            <a href="/pages/loan emi.html" target="_blank">Pay Loan EMI</a>
+                        </li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="#PS">Payments & services</a>
+                    <ul>
+                        <li>
+                            <a href="/pages/online services.html" target="_blank">Online Services</a>
+                        </li>
+                        <li>
+                            <a href="/pages/send money.html" target="_blank">Send Money to Anyone</a>
+                        </li>
+                        <!-- <li><a href="#RB" target="_blank">Bill Payments & Recharge</a></li> -->
+                        <!-- <li><a href="#RB" target="_blank">Pay Loan EMI</a></li> -->
+                    </ul>
+                </li>
+                <li>
+                    <a href="#Comp">Company</a>
+                    <ul>
+                        <li><a href="/pages/about.html" target="_blank">About</a></li>
+                        <li>
+                            <a href="/pages/contact us.html" target="_blank">Contact Us </a>
+                        </li>
+                        <li>
+                            <a href="/pages/customer.html" target="_blank">Customer Care</a>
+                        </li>
+                        <li>
+                            <a href="/pages/terms.html" target="_blank">Terms & Condition</a>
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </nav>
+        <div class="nav_right">
+            <div class="auth-buttons">
+                <a href="/pages/signin.html" class="btn btn-signin">Sign In</a>
+                <a href="/pages/signup.html" class="btn btn-signup">Sign Up</a>
+            </div>
+        </div>
     </header>
 
     <section id="home" class="hero">
-      <div class="hero-content">
-        <h1 style="font-family: Story Script;">Make life Easy with <br><span>HasPay</span></h1>
-        <p>
-          Seamless, secure, and instant — manage all your financial needs at one
-          place.
-        </p>
-        <a href="#s" class="cta-btn">Get Started</a>
-      </div>
+        <div class="hero-content">
+            <h1 style="font-family: Story Script">
+                Make life Easy with <br /><span>HasPay</span>
+            </h1>
+            <p>
+                Seamless, secure, and instant — manage all your financial needs at one
+                place.
+            </p>
+            <a href="#s" class="cta-btn">Get Started</a>
+        </div>
     </section>
 
     <section id="services" class="services">
-      <h2>Our Services</h2>
-      <div class="service-container">
-        <!-- <div class="service-cards"> -->
-          <div class="service-card">
-            <a href="/mobile rch icon.png" target="_blank"
-              ><img src="/mobile rch icon.png"
-            /></a>
-            <h3>Mobile Recharge</h3>
-          </div>
-          <div class="service-card">
-            <a href="/" target="_blank"><img src="/Elec icon.avif" /></a>
-            <h3>Electricity bill</h3>
-          </div>
-          <div class="service-card">
-            <a href="/mobile rch icon.png" target="_blank"
-              ><img src="/DTH rch icon.avif"
-            /></a>
-            <h3>DTH Recharge</h3>
-          </div>
-          <div class="service-card">
-            <a href="/Loan EMI icon.avif" target="_blank"
-              ><img src="/Loan EMI icon.avif"
-            /></a>
-            <h3>Pay Loan EMI</h3>
-          </div>
-      </div>
+        <h2>Our Services</h2>
+        <div class="service-container">
+            <!-- <div class="service-cards"> -->
+            <div class="service-card">
+                <a href="/pages/bills.html" target="_blank"><img src="/mobile rch icon.png" /></a>
+                <h3>Mobile Recharge</h3>
+            </div>
+            <div class="service-card">
+                <a href="/pages/electric.html" target="_blank"><img src="/Elec icon.png" /></a>
+                <h3>Electricity bill</h3>
+            </div>
+            <div class="service-card">
+                <a href="/pages/dth.html" target="_blank"><img src="/DTH rch icon.png" /></a>
+                <h3>DTH Recharge</h3>
+            </div>
+            <div class="service-card">
+                <a href="/pages/loan emi.html" target="_blank"><img src="/Loan EMI icon.avif" /></a>
+                <h3>Pay Loan EMI</h3>
+            </div>
+        </div>
     </section>
-<section id="features" class="features">
-      <h2>Why Choose HasPay?</h2>
-      <div class="feature-list">
-        <div class="feature">
-          <h3>Trusted & Secure</h3>
-          <p>We use advanced encryption to keep your data protected.</p>
+    <section id="features" class="features">
+        <h2>Why Choose HasPay?</h2>
+        <div class="feature-list">
+            <div class="feature">
+                <h3>Trusted & Secure</h3>
+                <p>We use advanced encryption to keep your data protected.</p>
+            </div>
+            <div class="feature">
+                <h3>Fast Transactions</h3>
+                <p>Experience blazing-fast transfers with 99.9% uptime.</p>
+            </div>
+            <div class="feature">
+                <h3>Cashback & Rewards</h3>
+                <p>Earn points and exclusive offers on every transaction.</p>
+            </div>
         </div>
-        <div class="feature">
-          <h3>Fast Transactions</h3>
-          <p>Experience blazing-fast transfers with 99.9% uptime.</p>
-        </div>
-        <div class="feature">
-          <h3>Cashback & Rewards</h3>
-          <p>Earn points and exclusive offers on every transaction.</p>
-        </div>
-      </div>
     </section>
-    
 
     <section class="banner">
-        <div class="banner_cont">
-            <div class="ban_card">
-
-            </div>
-
+        <div id="banner1" class="banner_cont">
+            <div class="ban_card"></div>
         </div>
-
+        <div id="banner2" class="banner_cont">
+            <div class="ban_card"></div>
+        </div>
     </section>
+
+
     <footer id="contact" class="footer">
-      <h2>Contact Us</h2>
-      <p>Email: support@haspay.com | Phone: +91 xxxxxxx273</p>
-      <p>© 2025 HasPay Inc. All rights reserved.</p>
+        <h2>Contact Us</h2>
+        <p>Email: support@haspay.com | Phone: +91 xxxxxxx273</p>
+        <p>© 2025 HasPay Inc. All rights reserved.</p>
     </footer>
-  </body>
+</body>
+
 </html>
