--- a/index.html
+++ b/index.html
@@ -127,13 +127,35 @@
 
     <section class="banner">
         <div id="banner1" class="banner_cont">
-            <div class="ban_card"></div>
+            <div class="ban_card">
+                <img src="/card text icon.avif" alt="cards" class="ct" />
+                <h2 id="CreditCards">
+                    One destination for
+                    <span id="Credit">Credit Cards</span>
+                </h2>
+                <p id="cardpara">
+                    Paytm HDFC, SBI Card & Axis Bank Credit Card with assured Cashback
+                    and incredible offers.
+                </p>
+                <img src="/atm cards icon.avif" alt="cards" id="atmc" />
+            </div>
         </div>
         <div id="banner2" class="banner_cont">
-            <div class="ban_card"></div>
+            <div class="ban_card">
+                <a href="/index.html" class="brand" id="brand2">
+                    <span class="brand-text1">Has<span class="accent1">Pay</span></span>
+                </a>
+                <h2 id="CreditCards">
+                    Insurance ka
+                    <span id="Credit">Super Market</span>
+                </h2>
+                <p id="cardpara">
+                    A Smart, Simple & Transparent Platform to Explore & Purchase Insurance.
+                </p>
+                <img src="/family icon.avif" alt="cards" id="atmc" />
+            </div>
         </div>
     </section>
-
 
     <footer id="contact" class="footer">
         <h2>Contact Us</h2>
