sign up page complete

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                 Seamless, secure, and instant — manage all your financial needs at one
                 place.
             </p>
-            <a href="#s" class="cta-btn">Get Started</a>
+            <a href="/pages/signup.html" class="cta-btn">Get Started</a>
         </div>
     </section>
 
