--- a/pages/signup.html
+++ b/pages/signup.html
@@ -1,11 +1,65 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Sign up — HasPay</title>
+    <link rel="stylesheet" href="/pages CSS/signup.css" />
 </head>
+
 <body>
-    Sign Up
+    <a href="/index.html" aria-label="Back to home"><img src="/icons and images/back button.svg" alt="back"
+            style="width:36px;position:absolute;left:18px;top:18px"></a>
+
+    <main class="signup-wrap">
+        <section id="signup-card" class="signup-card">
+            <div class="sleft">
+                <h1 class="brand">Sign<span class="brand1"> Up</span></h1>
+                <p class="lead">Connect and manage payments easily. Create an account to get started.</p>
+            </div>
+
+            <form class="signup-form" action="#" method="post" novalidate>
+                <div class="row">
+                    <div class="col">
+                        <label for="first">First name</label>
+                        <input id="first" name="first" type="text" placeholder="First name" required />
+                    </div>
+                    <div class="col">
+                        <label for="last">Last name</label>
+                        <input id="last" name="last" type="text" placeholder="Last name" required />
+                    </div>
+                </div>
+
+                <label for="email">Mobile number or email</label>
+                <input id="email" name="email" type="email" placeholder="you@example.com" required />
+
+                <label for="password">New password</label>
+                <input id="password" name="password" type="password" placeholder="Create a password" required />
+
+                <div class="row">
+                    <div class="col">
+                        <label for="dob">Date of birth</label>
+                        <input id="dob" name="dob" type="date" />
+                    </div>
+                    <div class="col">
+                        <label>Gender</label>
+                        <div class="gender">
+                            <label><input type="radio" name="gender" value="male"> Male</label>
+                            <label><input type="radio" name="gender" value="female"> Female</label>
+                            <label><input type="radio" name="gender" value="other"> Other</label>
+                        </div>
+                    </div>
+                </div>
+
+                <button type="submit" class="btn">Sign Up</button>
+
+                <p class="terms">By clicking Sign Up you agree to our Terms, Data Policy and Cookies Policy.</p>
+
+                <p class="signin-link">Already have an account? <a href="/pages/signin.html">Sign in</a></p>
+            </form>
+        </section>
+    </main>
 </body>
+
 </html>
