folder properly organized

--- a/index.html
+++ b/index.html
@@ -90,19 +90,19 @@
         <div class="service-container">
             <!-- <div class="service-cards"> -->
             <div class="service-card">
-                <a href="/pages/bills.html" target="_blank"><img src="/mobile rch icon.png" /></a>
+                <a href="/pages/bills.html" target="_blank"><img src="/icons and images/mobile rch icon.png" /></a>
                 <h3>Mobile Recharge</h3>
             </div>
             <div class="service-card">
-                <a href="/pages/electric.html" target="_blank"><img src="/Elec icon.png" /></a>
+                <a href="/pages/electric.html" target="_blank"><img src="/icons and images/Elec icon.png" /></a>
                 <h3>Electricity bill</h3>
             </div>
             <div class="service-card">
-                <a href="/pages/dth.html" target="_blank"><img src="/DTH rch icon.png" /></a>
+                <a href="/pages/dth.html" target="_blank"><img src="/icons and images/DTH rch icon.png" /></a>
                 <h3>DTH Recharge</h3>
             </div>
             <div class="service-card">
-                <a href="/pages/loan emi.html" target="_blank"><img src="/Loan EMI icon.avif" /></a>
+                <a href="/pages/loan emi.html" target="_blank"><img src="/icons and images/Loan EMI icon.avif" /></a>
                 <h3>Pay Loan EMI</h3>
             </div>
         </div>
@@ -128,7 +128,7 @@
     <section class="banner">
         <div id="banner1" class="banner_cont">
             <div class="ban_card">
-                <img src="/card text icon.avif" alt="cards" class="ct" />
+                <img src="/icons and images/card text icon.avif" alt="cards" class="ct" />
                 <h2 id="CreditCards">
                     One destination for
                     <span id="Credit">Credit Cards</span>
@@ -137,7 +137,7 @@
                     Paytm HDFC, SBI Card & Axis Bank Credit Card with assured Cashback
                     and incredible offers.
                 </p>
-                <img src="/atm cards icon.avif" alt="cards" id="atmc" />
+                <img src="/icons and images/atm cards icon.avif" alt="cards" id="atmc" />
             </div>
         </div>
         <div id="banner2" class="banner_cont">
@@ -152,7 +152,7 @@
                 <p id="cardpara">
                     A Smart, Simple & Transparent Platform to Explore & Purchase Insurance.
                 </p>
-                <img src="/family icon.avif" alt="cards" id="atmc" />
+                <img src="/icons and images/family icon.avif" alt="cards" id="atmc" />
             </div>
         </div>
     </section>
