Some optimisations and added Readme content

--- a/index.html
+++ b/index.html
@@ -43,8 +43,6 @@
                         <li>
                             <a href="/pages/send money.html" target="_blank">Send Money to Anyone</a>
                         </li>
-                        <!-- <li><a href="#RB" target="_blank">Bill Payments & Recharge</a></li> -->
-                        <!-- <li><a href="#RB" target="_blank">Pay Loan EMI</a></li> -->
                     </ul>
                 </li>
                 <li>
@@ -88,22 +86,22 @@
     <section id="services" class="services">
         <h2>Our Services</h2>
         <div class="service-container">
-            <!-- <div class="service-cards"> -->
-            <div class="service-card">
+            <div class="service-card" >
                 <a href="/pages/bills.html" target="_blank"><img src="/icons and images/mobile rch icon.png" /></a>
-                <h3>Mobile Recharge</h3>
+                <a class="s-text" href="/pages/bills.html" target="_blank">Mobile Recharge</a>
             </div>
             <div class="service-card">
                 <a href="/pages/electric.html" target="_blank"><img src="/icons and images/Elec icon.png" /></a>
-                <h3>Electricity bill</h3>
+                <a class="s-text" href="/pages/electric.html" target="_blank">Electricity bill</a>
+
             </div>
             <div class="service-card">
                 <a href="/pages/dth.html" target="_blank"><img src="/icons and images/DTH rch icon.png" /></a>
-                <h3>DTH Recharge</h3>
+                <a class="s-text" href="/pages/dth.html" target="_blank">DTH Recharge</a>
             </div>
             <div class="service-card">
                 <a href="/pages/loan emi.html" target="_blank"><img src="/icons and images/Loan EMI icon.avif" /></a>
-                <h3>Pay Loan EMI</h3>
+                <a class="s-text" href="/pages/loan emi.html" target="_blank">Pay Loan EMI</a>
             </div>
         </div>
     </section>
