--- a/pages/signin.html
+++ b/pages/signin.html
@@ -12,24 +12,14 @@
     <a href="/index.html" aria-label="Back to home"><img src="/icons and images/back button.svg" alt="back"
             style="width:36px;position:absolute;left:18px;top:18px"></a>
 
-    <main class="signup-wrap">
+    <main class="signupW">
         <section id="signup-card" class="signup-card">
-            <div class="sleft">
+            <div class="cont">
                 <h1 class="brand">Sign In</h1>
-                <p class="lead">Welcome Back Bro</p>
+                <p class="lead">Welcome Back</p>
             </div>
 
             <form class="signup-form" action="#" method="post" novalidate>
-                <!-- <div class="row">
-                    <div class="col">
-                        <label for="first">First name</label>
-                        <input id="first" name="first" type="text" placeholder="First name" required />
-                    </div>
-                    <div class="col">
-                        <label for="last">Last name</label>
-                        <input id="last" name="last" type="text" placeholder="Last name" required />
-                    </div>
-                </div> -->
 
                 <label for="email">Mobile number or email</label>
                 <input id="email" name="email" type="email" placeholder="you@example.com" required />
@@ -41,7 +31,7 @@
 
                 <a href="" class="terms">Forget password</a>
 
-                <p class="signin-link">Don't have an account? <a href="/pages/signup.html">Sign up</a></p>
+                <p class="signin_link">Don't have an account? <a href="/pages/signup.html">Sign up</a></p>
             </form>
         </section>
     </main>
